--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
    <tittle>SAV ARCHIVE BETA WEBSITE</tittle>
   </head> 
   <body>
-    <h1>REMEMBER ITS ONLY A BETA WEBSITE XD</h1>
+    <h1>REMEMBER ITS ONLY A BETA WEBSITE</h1>
   </body>
 </html>
